--- a/Views/Acceso/Inicio.cshtml
+++ b/Views/Acceso/Inicio.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Certamen</h1>
+<center>  <h1>Certamen</h1>    </center>
 
 
 <div class="text-center">
@@ -65,7 +65,7 @@
 
 
 
-<form asp-controller="Home" asp-Action="Agregarparticipante" method="post" style="background-color: black ; color: white ; border-radius: 40px; border-color: pink">
+<form asp-controller="Home" asp-Action="Index" method="post" style="background-color: black ; color: white ; border-radius: 40px; border-color: pink">
 
 
     <button class="btn btn-info">Agregar Participante</button>
@@ -76,7 +76,7 @@
 <br>
 <br>
 
-<form asp-controller="Home" asp-Action="Requisitosparticipantes" method="post" style="background-color: black ; color: white ; border-radius: 40px; border-color: pink ; align-content center">
+<form asp-controller="Home" asp-Action="Requisitos" method="post" style="background-color: black ; color: white ; border-radius: 40px; border-color: pink ; align-content center">
 
 
     <button class="btn btn-info">Requisitos</button>
