--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 
+
 <div class="row justify-content-center">
 
     <div class="col-10">
@@ -10,21 +11,20 @@
         <div class="alert alert-info" role="alert">
             Participantes
         </div>
-        <button type="button" class="btn btn-success btn-sm boton-nuevo-empleado"> Agregar Participante </button>
+        <button type="button" class="btn btn-success btn-sm boton-nuevo-empleado">Agregar participante</button>
 
-        <table class="table table-striped" id="tablaEmpleados" style="color:white">
-           <thead>
-               <tr>
-                   <th>Nombre Completo</th>
-                   <th>Formacion</th>
-                    <th>Edad </th>
-                   <th>Peso y Altura </th>
-                   <th>Fecha Contrato</th>
-                   <th></th>
-               </tr>
-           </thead>
-           <tbody>
-           </tbody>
+        <table class="table  table-pink table-striped-colums" id="tablaEmpleados" style="color:white;">
+            <thead>
+                <tr>
+                    <th>Nombre Completo</th>
+                    <th>Departamento</th>
+                    <th>Edad</th>
+                    <th>Fecha Inscripcion</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
         </table>
 
     </div>
@@ -33,7 +33,7 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="modalEmpleado" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="modalEmpleado" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="color: black ">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -41,29 +41,24 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-               
+
                 <div class="mb-3">
-                    <label  class="form-label">Nombre Completo</label>
+                    <label class="form-label">Nombre Completo</label>
                     <input type="text" class="form-control" id="txtNombreCompleto" autocomplete="off">
                 </div>
 
                 <div class="mb-3">
-                    <label class="form-label">Formacion</label>
-                    <select class="form-select" id="cboFormacion"></select>
+                    <label class="form-label">Departamento</label>
+                    <select class="form-select" id="cboDepartamento"></select>
                 </div>
 
                 <div class="mb-3">
-                    <label class="form-label">Peso y Altura</label>
-                    <input type="text" class="form-control" id="txtAltura">
+                    <label class="form-label">Edad</label>
+                    <input type="number" class="form-control" id="txtSueldo">
                 </div>
 
                 <div class="mb-3">
-                    <label  class="form-label">Edad</label>
-                    <input type="number" class="form-control" id="txtEdad">
-                </div>
-
-                <div class="mb-3">
-                    <label  class="form-label">Fecha Inscripcion </label>
+                    <label class="form-label">Fecha Inscripcion</label>
                     <input type="text" class="form-control" id="txtFechaContrato">
                 </div>
 
