--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -16,7 +16,8 @@ html {
 body {
   margin-bottom: 60px;
   background-color: black;
-  color:black;
+  color:burlywood;
+  
 }
 
 .gradient-custom {
