--- a/Views/Acceso/Inicio.cshtml
+++ b/Views/Acceso/Inicio.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<center>  <h1>Certamen</h1>    </center>
+<center>  <h1></h1>    </center>
 
 
 <div class="text-center">
