--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
             <thead>
                 <tr>
                     <th>Nombre Completo</th>
-                    <th>Departamento</th>
+                    <th>Estudios </th>
                     <th>Edad</th>
                     <th>Fecha Inscripcion</th>
                     <th></th>
