--- a/Views/Acceso/Inicio.cshtml
+++ b/Views/Acceso/Inicio.cshtml
@@ -4,20 +4,46 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<center>  <h1></h1>    </center>
 
 
-<div class="text-center">
-    <h1 class="display-4">Certamen</h1>
+<div class="mt-4 p-5 bg-white text-white rounded">
+    
+
+
+    <img src="/lib/Banner.jpg" style=" height: 210px; width: 1200px" />
+
+    <br >
+
+
+    <p style="color: black"> Podes ver los requisitos en esta seccion:
+        <form asp-controller="Home" asp-Action="Requisitos" method="post">
+
+
+            <button class="btn btn-info">Requisitos</button>
+
+        </form>
+
+        <br >
+
+        <p style="color: black"> Para inscribirte has click en este botón</p>
+
+        <form asp-controller="Home" asp-Action="Index" method="post">
+
+
+            <button class="btn btn-info">Agregar Participante</button>
+
+        </form>
+
+
+
+    </p>
+
+
+ 
 
 </div>
 
 
-<img src="/lib/Banner.jpg" style=" height: 250px; width: 1300px;" />
-
-<br>
-
-<br>
 
 
 <br>
@@ -25,8 +51,13 @@
 <br>
 
 
+<br>
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<br>
+
+
+
+<div id="#Mycarousel" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -73,12 +104,3 @@
 </form>
 
 
-<br>
-<br>
-
-<form asp-controller="Home" asp-Action="Requisitos" method="post" style="background-color: black ; color: white ; border-radius: 40px; border-color: pink ; align-content center">
-
-
-    <button class="btn btn-info">Requisitos</button>
-
-</form>
