--- a/Views/Acceso/Inicio.cshtml
+++ b/Views/Acceso/Inicio.cshtml
@@ -6,54 +6,10 @@
 
 
 
-<div class="mt-4 p-5 bg-white text-white rounded">
-    
-
-
-    <img src="/lib/Banner.jpg" style=" height: 210px; width: 1200px" />
-
-    <br >
-
-
-    <p style="color: black"> Podes ver los requisitos en esta seccion:
-        <form asp-controller="Home" asp-Action="Requisitos" method="post">
-
-
-            <button class="btn btn-info">Requisitos</button>
-
-        </form>
-
-        <br >
-
-        <p style="color: black"> Para inscribirte has click en este botón</p>
-
-        <form asp-controller="Home" asp-Action="Index" method="post">
-
-
-            <button class="btn btn-info">Agregar Participante</button>
-
-        </form>
-
-
-
-    </p>
-
-
- 
-
-</div>
 
 
 
 
-<br>
-
-<br>
-
-
-<br>
-
-<br>
 
 
 
@@ -68,10 +24,10 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-block w-100" id="img" src="/lib/Concurso.jpg" style="width: 100px; height: 600px;" alt="First slide">
+            <img class="d-block w-100" id="img" src="~/lib/aw.jpg" style="width: 100px; height: 600px;" alt="First slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" id="img" src="/lib/Rosa.jpg" style="width: 100px; height: 600px;" alt="Second slide">
+            <img class="d-block w-100" id="img" src="~/lib/Rosa.jpg" style="width: 100px; height: 600px;" alt="Second slide">
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" id="img" src="" style="width: 100px; height: 600px;" alt="Third slide">
@@ -87,6 +43,75 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
+<br >
+<br >
+
+
+
+
+<div class="card mb-3" style="max-width: 540px; float: right">
+    <div class="row g-0">
+        <div class="col-md-4">
+            <img src="~/lib/Chica1ZuleikaSoler_Mesa de trabajo 1.png" class="img-fluid rounded-start" alt="...">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title">Zuleica Soler </h5>
+                <p class="card-text">Soy una joven chica de 23 años, estudie Ingenieria Industrial, casi no me gusta maquillarme me gusta andar al natural. Me encanta hacer ejercicio.</p>
+                <p class="card-text"><small class="text-muted">Última actualización hace 3 minutos</small></p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<br >
+
+
+<div class="card mb-3" style="max-width: 540px ">
+    <div class="row g-0">
+        <div class="col-md-4">
+            <img src="~/lib/Chica4_StephanieSánchez_Mesa de trabajo 1.png" class="img-fluid rounded-start" alt="...">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title">Andrea Escobar </h5>
+                <p class="card-text">Tengo 22 años, estoy estudiando Veterinaria.Me encantan los perros </p>
+                <p class="card-text"><small class="text-muted">Última actualización hace 3 minutos</small></p>
+            </div>
+        </div>
+    </div>
+</div>
+<br>
+<div class="card mb-3" style="max-width: 540px ; float: right">
+    <div class="row g-0">
+        <div class="col-md-4">
+            <img src="~/lib/Chica3_AndreaEscobar_Mesa de trabajo 1.png" class="img-fluid rounded-start" alt="...">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title">Andrea Escobar </h5>
+                <p class="card-text">Tengo 22 años, estoy estudiando Veterinaria.Me encantan los perros </p>
+                <p class="card-text"><small class="text-muted">Última actualización hace 3 minutos</small></p>
+            </div>
+        </div>
+    </div>
+</div>
+<br>
+
+<div class="card mb-3" style="max-width: 540px;">
+    <div class="row g-0">
+        <div class="col-md-4">
+            <img src="~/lib/Chica2MarcelaSolorzano_Mesa de trabajo 1.png" class="img-fluid rounded-start" alt="...">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title">Marcela Solorzano </h5>
+                <p class="card-text">Tengo 26 años, estudie Educacion Prescolar. Me encanta hacer ejercicio e ir a la montaña.</p>
+                <p class="card-text"><small class="text-muted">Última actualización hace 3 minutos</small></p>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
@@ -95,12 +120,33 @@
 
 
 
+ <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="card" style="max-width: 300px">
+    <div class="card-header">
+        Cita
+    </div>
+    <div class="card-body">
+        <blockquote class="blockquote mb-0">
+            <p>"Porque solo se vive una vez" </p>
+            <footer class="blockquote-footer">Maria Porras </footer>
+        </blockquote>
+    </div>
+</div>
 
-<form asp-controller="Home" asp-Action="Index" method="post" style="background-color: black ; color: white ; border-radius: 40px; border-color: pink">
 
 
-    <button class="btn btn-info">Agregar Participante</button>
 
-</form>
+
+
+
+
 
 
