--- a/Views/Acceso/Index.cshtml
+++ b/Views/Acceso/Index.cshtml
@@ -30,6 +30,17 @@
 
 </div>
 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 
 
+<center> <img src="~/lib/C.png" img-fluid rounded-start" alt="CB" style="height: 110px; width:220px"> </center>
