--- a/Views/Acceso/Inicio.cshtml
+++ b/Views/Acceso/Inicio.cshtml
@@ -10,9 +10,6 @@
 
 
 
-
-
-
 <div id="#Mycarousel" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -150,3 +147,5 @@
 
 
 
+
+   <center> <img src="~/lib/C.png" img-fluid rounded-start" alt="CB" style="height: 110px; width:220px"> </center>
