--- a/Views/Home/Participantes.cshtml
+++ b/Views/Home/Participantes.cshtml
@@ -17,7 +17,11 @@
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/AppCrud.styles.css" asp-append-version="true" />
+
+
+
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark gradient-custom navbar-toggleable-sm border-bottom box-shadow">
@@ -57,6 +61,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Participantes">Participantes </a>
                         </li>
 
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Institucion">Institucion </a>
+                        </li>
+
+
+
 
 
 
@@ -83,8 +93,10 @@
     </header>
 
 
+  
 
-    <div style="background-color: #B4C4B4; width: 2000px; height: 2000px;border:none" class="container col-12">
+
+    <div style="background-color: #B4C4B4; width: 2000px; height: 1100px;border:none" class="container col-12">
         <div class="row">
             <div class="listado col-12">
             </div>
@@ -187,18 +199,21 @@
             </div>
 
 
+            <div class="col-sm-3">
+                <div class="card" style="background-color: transparent;">
+                    <div class="card-body">
+                        <h5 class="card-title text-center"><img id="participante" src="~/lib/Chica9CarlotaMata_Mesa de trabajo 1.png" style="height: 300px; width: 300px;"> </h5>
+                        <p class="card-text"><label id="componente"> </label> </p>
+                        <p class="collapse" id="collapseExample1">
+                        <p class="card-text text-center">                        </p>
+                    </div>
+                </div>
+            </div>
+     </div>
+ </div>
 
 
-
-
-
-
-
-
-        </div>
-    </div>
-
-
+    <center> <img src="~/lib/C.png" img-fluid rounded-start" alt="CB" style="height: 110px; width:220px"> </center>
             
 
 
