--- a/Views/Home/Requisitos.cshtml
+++ b/Views/Home/Requisitos.cshtml
@@ -34,3 +34,5 @@
 
 <center>  <img src="~/lib/Dorado.png" style="width: 500px ; height: 400px ; align-content:center" />  </center>
 
+
+<center> <img src="~/lib/C.png" img-fluid rounded-start" alt="CB" style="height: 110px; width:220px"> </center>
