--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -49,6 +49,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Participantes">Participantes </a>
                         </li>
 
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Institucion">Institucion </a>
+                        </li>
+
+
+
 
 
 
