--- a/Views/Votaciones/Concursantes.cshtml
+++ b/Views/Votaciones/Concursantes.cshtml
@@ -1,4 +1,8 @@
 ﻿@model IEnumerable<Concursante>
+@{
+    ViewData["Title"] = "Concursante";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
     <h1> Lista de Concursantes </h1>
     <table class="table">
