--- a/Views/Acceso/Inicio.cshtml
+++ b/Views/Acceso/Inicio.cshtml
@@ -139,13 +139,40 @@
 </div>
 
 
+<br>
+
+
+<div class="row" >
+    <div class="column" style="background-color:transparent;">
+        <h2>
+            <center> <img src="~/lib/Facebook.png" img-fluid rounded-start" alt="CB" style="height: 60px; width:90px"> </center>
+            
+        </h2>
+   
+    </div>
+    <div class="column" style="background-color:transparent;">
+        <h2>
+            <center> <img src="~/lib/Instagram.jpeg" img-fluid rounded-start" alt="CB" style="height: 60px; width:90px"> </center>
+            
+        </h2>
+ 
+    </div>
+    <div class="column" style="background-color:transparent;">
+        <h2>
+            <center> <img src="~/lib/Whatsapp.png" img-fluid rounded-start" alt="CB" style="height: 60px; width:90px"> </center>
+           
+        </h2>
+        
+    </div>
+</div>
 
 
 
 
 
+<br >
+<br>
 
 
 
-
-   <center> <img src="~/lib/C.png" img-fluid rounded-start" alt="CB" style="height: 110px; width:220px"> </center>
+<center> <img src="~/lib/C.png" img-fluid rounded-start" alt="CB" style="height: 110px; width:220px"> </center>
