--- a/Views/Home/Institucion.cshtml
+++ b/Views/Home/Institucion.cshtml
@@ -20,7 +20,7 @@
 </div>
 
 
-<h1 style="color: white ; text-align: center "> Historia</h1>
+
 
 
 
@@ -28,7 +28,8 @@
     <div id="i-do">
         <ul>
             <li>
-                <i class="fas fa-headphones-alt"><p class="text-center" style="color: black">
+                <h1 style="text-align:center"> HISTORIA</h1>
+                <p class="text-center" style="color: black ;     font-family: serif;">
                         <br> <br> Carlos Luis Velez , dio inicio en 1934 al Concurso de Belleza® . <br>
                         En ese año comenzó el evento que ha congregado a las costarricenses <br>
                         durante ocho décadas en torno a la belleza de la mujer, y ha unido<br> 
@@ -45,7 +46,7 @@
 
 
 
-                </i>
+                
                 </p>
             </li>
            
@@ -74,7 +75,7 @@
 <center>
     <div style="color: white; background-color: #b99366; width: 500px">
 
-        <p class="text-center">
+        <p class="text-center" style="    font-family: serif;">
             Creemos que ser bellas es mucho más que lucir bien en las pasarelas.<br>
             Creemos que la admiración de la gente  se gana por ser íntegras y sinceras.<br>
             Creemos que la belleza se expresa en cada gesto de hija, compañera, madre, amiga, hermana y ciudadana.<br>
@@ -87,20 +88,70 @@
     </div>
 </center>
 
-<h1 style="color: white ; text-align: center "> ¿PARA? </h1>
 
-<center>
-    <div style="color: black; background-color: white; width: 1000px">
+<div class="container" style="background-color: white; display: flex; width: 1000px">
+    <div id="i-do">
+        <ul>
+            <li>
+                <h1 > ¿PARA QUE UNA REINA?</h1>
+                <p class="text-center" style="color: black ;     font-family: serif;">
+                    <br>
+                    Cuando se elige a la Señorita, se reconocen en ella, no solo su belleza <br>
+                    y actitudes memorables,también, su conocimiento y sensibilidad a la situación actual del país, 
+                    los valores de toda una nación representados en su integralidad y en su disposición para vincularse
+                    y comprometerse con la misión social del concurso.<br><br>
 
-        <p class="text-center">
-            Cuando se elige a la Señorita, se reconocen en ella, no solo su belleza y actitudes memorables,<br>
-            también, su conocimiento y sensibilidad a la situación actual del país, los valores de toda una nación<br>
-            representados en su integralidad y en su disposición para vincularse y comprometerse con la misión social del concurso.
+                    Cada soberana deberá reflejar su sentido de colaboración y responsabilidad social,
+                    su capacidad de servicionpara liderar causas sociales y actividades que promuevan 
+                    la solidaridad y la construcción del país.
 
-            Cada soberana deberá reflejar su sentido de colaboración y responsabilidad social, su capacidad de servicio<br>
-            para liderar causas sociales y actividades que promuevan la solidaridad y la construcción del país.
-        </p>
+
+
+
+                </p>
+            </li>
+
+        </ul>
     </div>
-</center>
 
 
+
+
+    <div id="love-do">
+
+        <ul>
+            <li> <br>  <img src="~/lib/Reinas.jpeg" img-fluid rounded-start" alt="CB" style="height: 310px; width:420px ; float: right"> </li>
+
+        </ul>
+    </div>
+</div>
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+
+
+
+<div id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
+    <div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div><script>
+                                                             (function () {
+                                                                 var setting = { "query": "Teatro Nacional de Costa Rica, Calle 5, Catedral, San José, Costa Rica", "width": 505, "height": 237, "satellite": false, "zoom": 18, "placeId": "ChIJIeF41GbjoI8RXG6rf0PeWuI", "cid": "0xe25ade437fab6e5c", "coords": [9.933153499999998, -84.07708509999999], "lang": "es", "queryString": "Teatro Nacional de Costa Rica, Calle 5, Catedral, San José, Costa Rica", "centerCoord": [9.933153499999998, -84.07708509999999], "id": "map-9cd199b9cc5410cd3b1ad21cab2e54d3", "embed_id": "1025547" };
+                                                                 var d = document;
+                                                                 var s = d.createElement('script');
+                                                                 s.src = 'https://1map.com/js/script-for-user.js?embed_id=1025547';
+                                                                 s.async = true;
+                                                                 s.onload = function (e) {
+                                                                     window.OneMap.initMap(setting)
+                                                                 };
+                                                                 var to = d.getElementsByTagName('script')[0];
+                                                                 to.parentNode.insertBefore(s, to);
+                                                             })();</script><a href="https://1map.com/es/map-embed">1 Map</a>
+</div>
