--- a/Views/Home/Requisitos.cshtml
+++ b/Views/Home/Requisitos.cshtml
@@ -4,35 +4,22 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Requisitos</h1>
 
 
 
-<ul class="list-unstyled" style="text-align: center">
-
-
-    <li>
-        <br>
-        <ul style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ; font-size: 15px; color:white ; text-align: center">
-            <li>Ser costarricense.</li>
-            <li>Tener edad de 18 a 28 años, cumplidos a diciembre de 2022.</li>
-            <li>Tener una estatura mínima 1.65 m.</li>
-            <li>Ser soltera, no haber estado casada.</li>
-            <li>No tener hijos.</li>
-            <li> Poseer conocimientos básicos en ingles </li>
-            <li> Ser estudiante graduada o universitaria </li>
-            <li> No estar embarazada </li>
-         
-
-
-        </ul>
-    </li>
-
-</ul>
+<center>  <img src="~/lib/Requisitos.png" style="width: 800px ; height: 600px ; align-content:center" />  </center>
 
 
 
-<center>  <img src="~/lib/Dorado.png" style="width: 500px ; height: 400px ; align-content:center" />  </center>
+<br >
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 
 <center> <img src="~/lib/C.png" img-fluid rounded-start" alt="CB" style="height: 110px; width:220px"> </center>
