--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -17,6 +17,7 @@ body {
     margin-bottom: 60px;
     background-color: #B4C4B4;
     color: burlywood;
+    font-family: serif;
 }
 
 .gradient-custom {
@@ -27,3 +28,18 @@ body {
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background: linear-gradient(to right, rgb(185, 147,102 ), rgb(255,191,191));
 }
+
+.column {
+    align-items:center;
+    margin-left:auto;
+    margin-right:auto;
+    width: 110px;
+    padding: 10px;
+    height: 75px; /* Should be removed. Only for demonstration */
+}
+
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
