Vista Votos y controller

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -66,10 +66,12 @@
                         </li>*@
 
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Acceso" asp-action="Salir">Salir </a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="VotarController" asp-action="ConcursanteV">Votos</a>
                         </li>
 
-
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Acceso" asp-action="Salir">Salir </a>
+                        </li>
                     </ul>
                 </div>
             </div>
