--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,19 +25,19 @@
 
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Acceso" asp-action="Inicio">Home </a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Acceso" asp-action="Inicio">Home </a>
                         </li>
 
 
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Requisitos">Requisitos </a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Requisitos">Requisitos </a>
                         </li>
 
                         @if (User.IsInRole("Administrador"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Registrar Participante</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Registrar Participante</a>
                             </li>
 
                         }
@@ -46,11 +46,11 @@
                        
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Participantes">Participantes </a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Participantes">Participantes </a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Institucion">Institucion </a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Institucion">Institución </a>
                         </li>
 
 
@@ -66,7 +66,11 @@
                         </li>*@
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="VotarController" asp-action="ConcursanteV">Votos</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="ConcursanteV">Votos</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Contacto">Contactanos</a>
                         </li>
 
                         <li class="nav-item">
