Agregar Imagenes en carrucel

--- a/Views/Home/Participantes.cshtml
+++ b/Views/Home/Participantes.cshtml
@@ -274,6 +274,28 @@
                     </div>
                 </div>
 
+                <div class="item">
+                    <div class="carousel-content">
+                        <div style="margin: 0 auto">
+                            <p>
+                                <img alt="The 2nd Message." src="https://brandemia.org/contenido/subidas/2023/10/portada-avianca-1200x670.jpg"
+                                     style="width: 1000px;height: 90px" />
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="carousel-content">
+                        <div style="margin: 0 auto">
+                            <p>
+                                <img alt="The 2nd Message." src="https://seeklogo.com/images/C/cristal-agua-purificada-logo-678F668344-seeklogo.com.png"
+                                     style="width: 1000px;height: 90px" />
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
