--- a/Views/Home/Institucion.cshtml
+++ b/Views/Home/Institucion.cshtml
@@ -36,8 +36,8 @@
                         en cada versión a las diferentes ciudades del país en un solo escenario.
                     <br>
 
-                        La audiencia del Teatro Nacional, lugar del certamen durante 48 años, <br>
-                        vio coronar en 1934 a la primera Señorita Costa Rica,Yolanda Emiliani .  <br>
+                        La audiencia del Teatro Nacional, lugar del certamen, <br>
+                        vio coronar en 1934 a la primera Señorita Costa Rica, Sofia Gomez .  <br>
                         Esta costarricense de 19 años portó la corona hasta 1947, <br> 
                         pues la Segunda Guerra Mundial impidió la otra candidata.<br> 
                         Dos años después se hace la primera transmisión televisada del <br> 
