--- a/Views/Home/Participantes.cshtml
+++ b/Views/Home/Participantes.cshtml
@@ -213,7 +213,7 @@
  </div>
 
 
-    <center> <img src="~/lib/C.png" img-fluid rounded-start" alt="CB" style="height: 110px; width:220px"> </center>
+ 
             
 
 
@@ -225,6 +225,7 @@
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                 <li data-target="#myCarousel" data-slide-to="1"></li>
                 <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="3"></li>
             </ol>
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
@@ -245,12 +246,13 @@
                         <div style="margin: 0 auto">
                             
                             <p>
-                                <img alt="The 2nd Message." src="https://i.pinimg.com/originals/73/08/ec/7308ecd9f5acacbeaa9d229dad4d1947.jpg"
+                                <img alt="The 2nd Message." src="https://ww1.prweb.com/prfiles/2022/06/08/18725752/HaciendaAltaGraciaLogo.jpg"
                                      style="width: 1000px;height: 150px" />
                             </p>
                         </div>
                     </div>
                 </div>
+
 
                 <div class="item">
                     <div class="carousel-content">
@@ -273,6 +275,18 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="item">
+                    <div class="carousel-content">
+                        <div style="margin: 0 auto">
+                            <p>
+                                <img alt="The 2nd Message." src="https://th.bing.com/th/id/OIP.jscwK41_DUSRzIPW_VGMPAHaB5?pid=ImgDet&rs=1"
+                                     style="width: 1000px;height: 90px" />
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
 
             </div>
             <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
@@ -307,6 +321,14 @@
             $('.carousel').carousel();
         });
     </script>
+
+    <br >
+    <br >
+
+
+    <center> <img src="~/lib/C.png" img-fluid rounded-start" alt="CB" style="height: 110px; width:220px"> </center>
+
+
 </body>
 
 
