--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -55,7 +55,9 @@
 
 
 
-
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Reinasdebelleza">Reinas</a>
+                        </li>
 
 
 
