--- a/Views/Acceso/Inicio.cshtml
+++ b/Views/Acceso/Inicio.cshtml
@@ -7,43 +7,18 @@
 
 
 
-
-
-
-
-<div id="#Mycarousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img class="d-block w-100" id="img" src="~/lib/aw.jpg" style="width: 100px; height: 600px;" alt="First slide">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" id="img" src="~/lib/Rosa.jpg" style="width: 100px; height: 600px;" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" id="img" src="" style="width: 100px; height: 600px;" alt="Third slide">
-        </div>
-    </div>
-
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
+<center><div style="color: white; background-color: silver ; width: 650px" >
+    <h1>
+        ¡Conteo regresivo a Certamen 2023!
+    </h1>
+    <p>
+        ¡Falta solo 1 mes para el evento más esperado del año! El próximo 07 de Diciembre, <br>
+        las mujeres más bellas de Costa Rica se reunirán para competir por la corona 2023. <br>
+        ¿Quién será la sucesora de la actual reina, Gabriela Martinez?
+        
+    </p>
 </div>
-<br >
-<br >
-
+</center>
 <div id="countdown"> </div>
 
 <style>
@@ -106,6 +81,53 @@
 
 
 </script>
+
+
+
+<div id="#Mycarousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" id="img" src="~/lib/aw.jpg" style="width: 100px; height: 600px;" alt="First slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" id="img" src="~/lib/Rosa.jpg" style="width: 100px; height: 600px;" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" id="img" src="" style="width: 100px; height: 600px;" alt="Third slide">
+        </div>
+    </div>
+
+  
+</div>
+<br >
+<br >
+
+
+
+<br>
+
+
+<center><div style="color: black; background-color: none; width: 500px">
+    <h3>
+        ¡Algunas de nuestras candidatas!
+    </h3>
+    <p>
+       Conozca a nuestra candidatas en la pestaña de Participantes
+        
+       
+    </p>
+</div>
+</center>
+
+
 
 
 <div class="card mb-3" style="max-width: 540px; float: right">
