--- a/Views/Home/Participantes.cshtml
+++ b/Views/Home/Participantes.cshtml
@@ -17,16 +17,32 @@
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/AppCrud.styles.css" asp-append-version="true" />
+    
+    <style>
 
+        html {
+  font-size: 14px;
+    }
+
+
+
+    html {
+  position: relative;
+  min-height: 100%;
+    }
+    </style>
 
 
 </head>
 
-<body>
+<body style=" margin-bottom: 60px;
+    background-color: #B4C4B4;
+    color: burlywood;
+    font-family: serif; font-size: 10px">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark gradient-custom navbar-toggleable-sm border-bottom box-shadow">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">AppCrud</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Acceso" asp-action="Inicio">CB</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -37,19 +53,19 @@
 
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Acceso" asp-action="Inicio">Home </a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Acceso" asp-action="Inicio">Home </a>
                         </li>
 
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Requisitos">Requisitos </a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Requisitos">Requisitos </a>
                         </li>
 
 
                         @if (User.IsInRole("Administrador"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Registrar Participante</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Registrar Participante</a>
                             </li>
 
                         }
@@ -58,15 +74,17 @@
                         
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Participantes">Participantes </a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Participantes">Participantes </a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Institucion">Institucion </a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Institucion">Institucion </a>
                         </li>
 
 
-
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Contacto">Contactanos</a>
+                        </li>
 
 
 
@@ -226,6 +244,8 @@
                 <li data-target="#myCarousel" data-slide-to="1"></li>
                 <li data-target="#myCarousel" data-slide-to="2"></li>
                 <li data-target="#myCarousel" data-slide-to="3"></li>
+                   <li data-target="#myCarousel" data-slide-to="4"></li>
+                <li data-target="#myCarousel" data-slide-to="5"></li>
             </ol>
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
