--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark gradient-custom navbar-toggleable-sm border-bottom box-shadow">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">AppCrud</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Acceso" asp-action="Inicio">CB</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -55,21 +55,25 @@
 
 
 
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Reinasdebelleza">Reinas</a>
+                   
+
+
+
+
+
+                        @*      <li class="nav-item">
+                        <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Reinasdebelleza">Reinas</a>
                         </li>
-
-
-
-
-
-                        @* <li class="nav-item">
+                            
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>*@
+                        </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="ConcursanteV">Votos</a>
+                        <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="ConcursanteV">Votos</a>
                         </li>
+
+                        *@
 
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Contacto">Contactanos</a>
