--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Institucion">Institucion </a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Institucion">Institución </a>
                         </li>
 
 
@@ -64,10 +64,6 @@
                         @* <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>*@
-
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="VotarController" asp-action="ConcursanteV">Votos</a>
-                        </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Acceso" asp-action="Salir">Salir </a>
