--- a/Views/Home/Participantes.cshtml
+++ b/Views/Home/Participantes.cshtml
@@ -246,6 +246,8 @@
                 <li data-target="#myCarousel" data-slide-to="3"></li>
                    <li data-target="#myCarousel" data-slide-to="4"></li>
                 <li data-target="#myCarousel" data-slide-to="5"></li>
+                <li data-target="#myCarousel" data-slide-to="6"></li>
+                <li data-target="#myCarousel" data-slide-to="7"></li>
             </ol>
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
@@ -300,19 +302,35 @@
                     <div class="carousel-content">
                         <div style="margin: 0 auto">
                             <p>
-<<<<<<< HEAD
+ 
                                 <img alt="The 2nd Message." src="https://th.bing.com/th/id/OIP.jscwK41_DUSRzIPW_VGMPAHaB5?pid=ImgDet&rs=1"
-=======
-                                <img alt="The 2nd Message." src="https://brandemia.org/contenido/subidas/2023/10/portada-avianca-1200x670.jpg"
->>>>>>> 3d416ba90ba4eb31d4eae79c64043c8abd5a2aae
+
+                        
+ 
                                      style="width: 1000px;height: 90px" />
                             </p>
                         </div>
                     </div>
                 </div>
 
-<<<<<<< HEAD
-=======
+
+                <div class="item">
+                    <div class="carousel-content">
+                        <div style="margin: 0 auto">
+                            <p>
+
+
+                                <img alt="The 2nd Message." src="https://brandemia.org/contenido/subidas/2023/10/portada-avianca-1200x670.jpg"
+                                     style="width: 1000px;height: 90px" />
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+
+
+ 
+
                 <div class="item">
                     <div class="carousel-content">
                         <div style="margin: 0 auto">
@@ -323,7 +341,6 @@
                         </div>
                     </div>
                 </div>
->>>>>>> 3d416ba90ba4eb31d4eae79c64043c8abd5a2aae
 
             </div>
             <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
