--- a/Views/Home/Contacto.cshtml
+++ b/Views/Home/Contacto.cshtml
@@ -31,7 +31,7 @@
 
 
 <form method="POST">
-    <center> <h1 style="color: white">Contactanos</h1></center>
+    <center> <h1 style="color: white">Contáctanos</h1></center>
 
     <input type="text" id="nombre" name="nombre" placeholder="Nombre" /><br />
   
