--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
                         *@
 
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Contacto">Contactanos</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Contacto">Contacto</a>
                         </li>
 
                         <li class="nav-item">
