--- a/Views/Home/Institucion.cshtml
+++ b/Views/Home/Institucion.cshtml
@@ -79,7 +79,7 @@
             Creemos que ser bellas es mucho más que lucir bien en las pasarelas.<br>
             Creemos que la admiración de la gente  se gana por ser íntegras y sinceras.<br>
             Creemos que la belleza se expresa en cada gesto de hija, compañera, madre, amiga, hermana y ciudadana.<br>
-            Creemos que belleza es el brillo en la mirada de los colombianos que se esfuerzan en lo que hacen.<br>
+            Creemos que belleza es el brillo en la mirada de las costarricenses que se esfuerzan en lo que hacen.<br>
 
             CREEMOS QUE BELLEZA ES MÁS.
             Y sobre todo, creemos que toda mujer íntegra y sincera puede inspirar al país entero a mejorar y representar dignamente al país en el extranjero.
